--- a/assets/scss/mixins/variables.scss
+++ b/assets/scss/mixins/variables.scss
@@ -4,7 +4,7 @@ $fs2: 3rem;
 $ftitle: 'BebasNeue';
 $ftext: 'Allerta';
 
-$blue: #00000a;
+$black: #00000a;
 $blue-light: #afd1ff;
 $blue-dark: #111827;
 $green: #269b00;
